# rtv1

./: CMakeLists.txt  README.md
include/: cam.h  color.h  ray.h  rtv1.h  sphere.h  vec.h
libft/: Makefile  author  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_free_string.c  ft_is_whitespace.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+26 more)
src/: cam.c  color.c  main.c  ray.c  rednder.c  sdl.c  sphere.c  vec.c
